<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/explorer"
        android:icon="@drawable/btn_1"
        android:title="@string/explorer"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white"/>

    <item
        android:id="@+id/saved"
        android:icon="@drawable/btn_2"
        android:title="@string/saved"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white"/>

    <item
        android:id="@+id/my_tickets"
        android:icon="@drawable/btn_3"
        android:title="@string/my_tickets"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/btn_1"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/green"
        app:cnb_iconColor="@color/white"/>

</menu>