<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="Password"
    android:background="@drawable/light_black_bg"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/login_to_your_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:layout_alignStart="@id/emailEdt"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/emailLabel"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Email"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEdt"
        android:layout_alignStart="@id/passwordEdt"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/passwordLabel"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_password"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="8dp"
        android:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEdt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/green_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_centerHorizontal="true"
        android.layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>