<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_black_bg"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTitle"
        android:layout_alignStart="@id/nameEdt"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/nameLabel"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Name"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEdt"
        android:layout_alignStart="@id/emailEdt"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEdt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/emailLabel"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Email"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEdt"
        android:layout_alignStart="@id/passwordInputLayout"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLabel"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:startIconTint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInputLayout"
        android:layout_alignStart="@id/confirmPasswordInputLayout"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordLabel"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/baseline_password_24"
        app:startIconTint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/Re_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordInputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/green_bg"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>