<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.DetailFilmActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Wrap filmPic inside BlurTarget -->
            <eightbitlab.com.blurview.BlurTarget
                android:id="@+id/blurTarget"
                android:layout_width="0dp"
                android:layout_height="600dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/filmPic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_pic"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />
            </eightbitlab.com.blurview.BlurTarget>

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/back_button_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_dark" />

            <eightbitlab.com.blurview.BlurView
                android:id="@+id/blurView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:blurOverlayColor="#90000000"
                app:layout_constraintBottom_toBottomOf="@+id/blurTarget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blurTarget">

                <LinearLayout
                    android:id="@+id/movieDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blur_bg"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="32dp">

                    <!-- Rest of your layout unchanged -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/titleTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:contentDescription="@string/movie_title"
                            android:text="@string/title"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/bookmarkBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/bookmark_button_desc"
                            app:srcCompat="@drawable/bookmark" />

                        <ImageView
                            android:id="@+id/shareBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/share"
                            app:srcCompat="@drawable/share" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/genreView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_margin="16dp"
                        android:background="@drawable/gradient_bg2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/movieTimeTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/year"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/imbdTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/imdb"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/summary"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movieSummaryTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/cast"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/castListView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp" />
                </LinearLayout>

            </eightbitlab.com.blurview.BlurView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buyTicketBtn"
                android:background="@drawable/green_bg"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/buy_ticket"
                android:textColor="@color/white"
                style="@android:style/Widget.Button"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBottomOf="@+id/blurView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blurView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
