<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.SeatListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back_button_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_seats"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/dateRecyclerview"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginVertical="8dp"
                android:layout_height="match_parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/timeRecyclerview"
                android:clipToPadding="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginVertical="8dp"
                android:layout_height="match_parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/select_you_seats"
                    app:srcCompat="@drawable/cinema" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/seatRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/availableViewIcon"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/ic_seat_available" />

                <TextView
                    android:id="@+id/availableViewTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/available"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/selectedViewIcon"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/ic_seat_selected" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/selected"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/ic_seat_unavailable" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/unavailable"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_rupee"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/downloadBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_ticket_btn"
                    android:background="@drawable/green_bg"
                    android:layout_marginVertical="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/numberSelectedTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_seat_selected"
                    android:textColor="@color/grey"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>